# HexControl

./: .env  .gitignore  OEAB_error_log.txt  README.md  bin_to_vid_MP.py  main.py  mkdocs.yml  post_process_arduinoDAQ.py  pyproject.toml  setup.py  sk2.py  sk4.py  start.py  start2.py  timer.py
BehavLink/: README.md  pyproject.toml
BehavLink/src/BehavLink/: __init__.py  link.py  mock.py  simulated.py
BehavLink/src/BehavLink/simulation/: __init__.py  rig_state.py  simulated_rig.py
BehavLink/src/ScalesLink/: scales.py
BehavLink/src/behaviour_rig/: __init__.py
DAQLink/: README.md  pyproject.toml
DAQLink/src/DAQLink/: __init__.py  manager.py  mock.py  protocol.py  serial_listen.py  test_connection.py  viewer.py
ScalesLink/: README.md  pyproject.toml
ScalesLink/src/ScalesLink/: __init__.py  calibrate.py  client.py  manager.py  mock.py  scales.py  server.py  simulated.py  zero.py
Scripts/: read.py  serialListen.py
archive/: OEAB_record.py  Tracker.py  bmp_to_video.py  default_OE_config  post_process.py  sk5.py  start.py
behaviour_rig_system/: README.md  main.py
behaviour_rig_system/autotraining/: __init__.py  engine.py  persistence.py  stage.py  transitions.py
behaviour_rig_system/config/: hex_behav_config.yaml  rigs.yaml  rigs_template.yaml
behaviour_rig_system/core/: __init__.py  board_registry.py  camera_manager.py  hardware.py  logging_config.py  mock_camera_manager.py  parameter_types.py  performance_tracker.py  peripheral_manager.py  protocol_base.py  protocol_loader.py  rig_interface.py  session.py  session_controller.py  session_state.py  virtual_rig_state.py
behaviour_rig_system/daq/: __init__.py  serial_listen_mega_fast.py
behaviour_rig_system/gui/: __init__.py  daq_view_subprocess.py  daq_view_widget.py  launcher.py  launcher_background.py  main_window.py  parameter_widget.py  post_processing_window.py  rig_window.py  scales_plot_widget.py  startup_overlay.py  theme.py  tracker_report_widget.py  virtual_rig_window.py
behaviour_rig_system/post_processing/: __init__.py  post_process_arduinoDAQ.py  post_processing_pipeline.py
behaviour_rig_system/protocols/: Yuanxin_playing.py  __init__.py  _protocol_template.py  auto_training.py  auto_training_audio.py  auto_training_audio_spatial.py  auto_training_visual.py  cue_conflict_test.py  full_task_with_wait.py  hardware_test.py  scales_test.py  scales_training.py  training_curriculum.py
behaviour_rig_system/protocols_hidden/: audio_spatial.py  full_task_with_wait.py  scales_training.py  solenoid_test.py
common/: arduino.py  params.py  scales.py  utils.py
configs/: 500ms.json  test.json  test2.json
debug/: battery_test.py  camera_test.py  view_daq.py
docs/: index.md
docs/architecture/: gui-system.md  (+6 more)
hex_behav_control/: .gitignore  config_template.json  start.py
hex_behav_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hexcontrol/: __init__.py  main.py  run.bat
peripherals/: arduino_daq_2_listen.py  read.py  serialListen.py  serial_listen_mega_fast.py
phases/: phase_2.py  phase_5.py  phase_9c.py
post_processing/: bin_to_vid_MP.py  post_process_arduinoDAQ.py
site/: 404.html  index.html
utils/: recover_ArduinoDAQ_data.py  zs.py
(+209 files in other folders)
