[project]
name = "hex-behav-control"
version = "0.1.0"
description = "Behaviour rig control system with peripheral libraries"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "behavlink @ file:BehavLink",
    "daqlink @ file:DAQLink",
    "scaleslink @ file:ScalesLink",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hex_behav_control", "behaviour_rig_system"]

[tool.hatch.metadata]
allow-direct-references = true
