[project]
name = "hex-behav-control"
version = "0.1.0"
description = "Behaviour rig control system with peripheral libraries"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "dearpygui>=2.0",
    "opencv-python>=4.13.0.92",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest",
    "behavlink",
    "daqlink",
    "scaleslink",
    "hex-behav-analysis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexcontrol"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.workspace]
members = ["BehavLink", "DAQLink", "ScalesLink"]

[tool.uv.sources]
behavlink = { workspace = true }
daqlink = { workspace = true }
scaleslink = { workspace = true }
hex-behav-analysis = { path = "../hex_behav_analysis", editable = true }
