[project]
name = "daqlink"
version = "0.1.0"
description = "Arduino DAQ data acquisition for behavioural experiment rigs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.20",
    "h5py>=3.0",
    "keyboard>=0.13",
    "colorama>=0.4",
    "tqdm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/DAQLink"]
