[project]
name = "scaleslink"
version = "0.1.0"
description = "Serial communication library for reading weight data from behavioural experiment rig scales"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ScalesLink"]
